--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   max-width: 1232px;
   width: 100%;
   padding: 30px 80px 20px;
-  background: #ffffff;
+  background: #fff;
   box-shadow: 0px 4px 27px rgba(230, 231, 234, 0.78);
+}
+
+@media screen and (max-width: 768px) {
+  .App {
+    padding: 20px 30px;
+  }
 }
