--- a/src/components/TableHeader/TableHeader.module.css
+++ b/src/components/TableHeader/TableHeader.module.css
@@ -8,13 +8,15 @@
 }
 
 .index {
-  width: 10%;
+  width: 115px;
 }
 
 .title {
-  width: 20%;
+  width: 100%;
+  text-align: center;
 }
 
 .text {
   width: 100%;
+  text-align: center;
 }
