--- a/src/components/TableHeader/TableHeader.module.css
+++ b/src/components/TableHeader/TableHeader.module.css
@@ -1,9 +1,9 @@
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   background: #474955;
   color: #fff;
-  padding: 19px 23px 16px;
+  padding: 19px 18px 16px;
   box-shadow: 0px 4px 27px rgba(230, 231, 234, 0.78);
 }
 
@@ -11,12 +11,8 @@
   width: 115px;
 }
 
-.title {
-  width: 100%;
-  text-align: center;
-}
-
+.title,
 .text {
-  width: 100%;
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
