--- a/src/components/HeaderItem/HeaderItem.module.css
+++ b/src/components/HeaderItem/HeaderItem.module.css
@@ -2,6 +2,11 @@
   position: relative;
   cursor: pointer;
   padding-right: 35px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
 }
 
 .block span::after {
