add pagination from buttons; add style; fix style

--- a/src/components/HeaderItem/HeaderItem.module.css
+++ b/src/components/HeaderItem/HeaderItem.module.css
@@ -21,3 +21,12 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+@media screen and (max-width: 768px) {
+  .block span {
+    padding-right: 0;
+  }
+  .block span::after {
+    display: none;
+  }
+}
