--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -16,6 +16,11 @@
 .number {
   margin: 0 7px;
   cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.number:hover {
+  color: #7EBC3C;
 }
 
 .current {
@@ -30,6 +35,16 @@
   color: #474955;
   border: none;
   cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.btn:hover {
+  color: #7EBC3C;
+}
+
+.btn:disabled {
+  color: rgba(71, 73, 85, 0.5);
+  cursor: initial;
 }
 
 @media screen and (max-width: 768px) {
