--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -33,6 +33,7 @@
   background-image: url("./img/search.svg");
   background-size: contain;
   background-position: center;
+  background-repeat: no-repeat;
   width: 21px;
   height: 21px;
 }
